Refactored some code to not nullify the selected listing when clicking anywhere on the map besides a neighborhood or listing. which was causing the closing of the modal in an abrupt way. Also implemented an innerOpen for the slideover to handle its state there, this fixed the modal flickering onto screen instead of sliding over on initial render

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,16 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   overflow-wrap: break-word;
+
+  overflow-x: hidden;
+}
+
+.swiper-button-prev {
+  color: black !important;
+}
+
+.swiper-button-next {
+  color: black !important;
 }
 
 .swiper-pagination-fraction.swiper-pagination.swiper-pagination-horizontal {
